# grapl-graph-descriptions-py

./: .gitignore  Cargo.toml  README.md  setup.py
grapl_graph_descriptions_py/: asset.py  generated_graph.py  ip_address.py  ip_port.py  network_connection.py  process.py  process_outbound_connection.py
proto/: build_proto.sh
src/: asset.py  asset_node.rs  dynamic_node.py  file.py  file_node.rs  graph.rs  ip_address_node.rs  ip_connection_node.rs  ip_port_node.rs  lib.rs  network_connection_node.rs  process_inbound_connection.py  process_inbound_connection_node.rs  process_node.rs  process_outbound_connection_node.rs
